[metadata]
name = srtools
version = 0.1.0
author = Colin Thackray
author_email = thackray@seas.harvard.edu
description = Source-receptor relationship tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cpthackray/source-receptor-tools
project_urls =
    Bug Tracker = https://github.com/cpthackray/source-receptor-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src